--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase credentials (sensitive)
+tools/serviceAccountKey.json
+**/serviceAccountKey.json
