--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^7.17.1",
+    "dotenv": "^17.2.3",
     "firebase-admin": "^13.5.0",
     "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1"
